--- a/Marathon-Skills-2016/Marathon-Skills-2016.csproj
+++ b/Marathon-Skills-2016/Marathon-Skills-2016.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Pages\MarathonInfo.xaml.cs">
       <DependentUpon>MarathonInfo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\MarathonRegister.xaml.cs">
+      <DependentUpon>MarathonRegister.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\RunnerCheckPage.xaml.cs">
       <DependentUpon>RunnerCheckPage.xaml</DependentUpon>
     </Compile>
@@ -138,6 +141,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\MarathonInfo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\MarathonRegister.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
